# magma

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  VERSION.TXT
area/: AREA.LST  README.TXT  VNUMS.TXT  air.are  arachnos.are  astral.are  boat1.are  canyon.are  castle.are  catacomb.are  chapel.are  circus.are  crystal.are  cult.are  daycare.are  descentbak.are  draconia.are  dream.are  drow.are  dwarven.are  dylan.are  eastern.are  firenewt.are  galaxy.are  gamehelp.are  gnome.are  goblins.are  gods.are  grave.are  grove.are  haon.are  haven.are  help.are  highland.are  hitower.are  hood.are  juargan.are  limbo.are  mahntor.are  marsh.are  (+33 more)
backup/: README
clans/: README.TXT
classes/: CLASS.LST  README.TXT
doc/: 2to3changes.txt  Logging.md  README.TXT  README.WIN  README.olc  act.txt  area.txt  bugs.txt  castlist.txt  clans.txt  class.txt  colors.txt  command.txt  config.txt  contrib.txt  credits.txt  dikuimp.txt  down.txt  drool.txt  event.txt  functions.txt  hacker.txt  immortal.txt  license.ue  magma_changes.txt  memory.txt  new.txt  next.nvy  next.txt  pfile.txt  port.txt  quests.txt  race.txt  sites.txt  skill.txt  sky.txt  snip.txt  spell.txt  template.txt  todo.txt  (+1 more)
editors/: README.TXT
log/: README.TXT
mobprogs/: Fido.prg  README.TXT  crapper.prg  utagi.prg  vkobolds_drool.prg  vkobolds_kwogg.prg  vkobolds_move.prg  vkobolds_thief.prg  vkobolds_vomit.prg
objprogs/: README.TXT  dtosser.prg  statue.prg
player/: README.TXT
src/: MagmaMUD.sln  MagmaMUD.vcproj  MagmaMUD.vcxproj  Makefile  Makefile.mak  Makefile.std  README.SSM.TXT  README.TXT  (+46 more)
(+343 files in other folders)
